# perfection

./: .gitignore  README.md  benchmarks.sh  build_common.sh  candidates.md  context.md  disassembly.sh  generate_all_summaries.sh  generate_summary.py  notes.md  run_all.sh  todo.md
branch_prediction/: CMakeLists.txt  main.cpp
cache_locality/: CMakeLists.txt  main.cpp
cmake/: PerfectionCommon.cmake  README.md
containers/vector/: CMakeLists.txt  bench_clearrefill.cpp  bench_copy.cpp  bench_insert.cpp  bench_iterate.cpp  common.h  main.cpp
exception/: CMakeLists.txt  main.cpp
ilp_data_dependencies/: CMakeLists.txt  main.cpp
ilp_no_data_dependencies/: CMakeLists.txt  main.cpp
inlining/: CMakeLists.txt  disassembly.sh  main.cpp  run_benchmarks.sh
isolated_builds/: README.md  benchmarks.sh  build.sh  disassembly.sh  run_all.sh  test_build.sh
noexcept/: CMakeLists.txt  main.cpp
skeleton/: CMakeLists.txt  main.cpp
virtual/: CMakeLists.txt  main.cpp
